fixes for building with conda compilers on mac and linux

--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -30,7 +30,7 @@ message(STATUS "psalg/CMakeLists: CURL_LIBRARY=${CURL_LIBRARY}")
 message(STATUS "psalg/CMakeLists: CONDA_PREFIX=$ENV{CONDA_PREFIX}")
 
 # this is necessary only on RHEL6 where we need to pick up clock_gettime
-if(APPLE OR NOT ROENTDEK_FOUND)
+if(APPLE)
     target_link_libraries(psalg
         utils
         calib
@@ -39,7 +39,7 @@ if(APPLE OR NOT ROENTDEK_FOUND)
         digitizer
         detector
     )
-else()
+elseif(ROENTDEK_FOUND)
     target_link_libraries(psalg
         utils
         calib
@@ -48,6 +48,16 @@ else()
         digitizer
         detector
         hexanode
+        rt
+    )
+else()
+  target_link_libraries(psalg
+        utils
+        calib
+        geometry
+        peaks
+        digitizer
+        detector
         rt
     )
 endif()
