DEV: pgpread_timetool has working parser. need to clean up test outputs

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -90,6 +90,7 @@ target_link_libraries(pgpread
 )
 
 add_executable(pgpread_timetool
+    AxiBatcherParser.cc
     pgpread_timetool.cc
 )
 target_include_directories(pgpread_timetool PUBLIC
