--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -29,8 +29,8 @@ procmgr_config = [
  { host: collect_host,    id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -C BEAM -P '+instr+' -B DAQ:LAB2 -x 2'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -l WARNING -H '+collect_host},
  # trigger event builder
- { host: 'drp-tst-dev009', id:'teb1', flags:'xpu', conda:conda_rel, cmd:'teb -vv -P '+instr+' -C '+collect_host},
+ { host: 'drp-tst-dev009', id:'teb1', flags:'xpu', conda:conda_rel, cmd:'teb -P '+instr+' -C '+collect_host},
  # drp
- { host: 'drp-tst-dev008', id:'cam_0', flags:'sxpu', conda:conda_rel, cmd:'drp -vv -l 0xf -D AreaDetector -d /dev/datadev_0 -P '+instr+' -C '+collect_host},
- { host: 'drp-tst-dev009', id:'cam_1', flags:'sxpu', conda:conda_rel, cmd:'drp -vv -l 0xf -D AreaDetector -d /dev/datadev_0 -P '+instr+' -C '+collect_host}
+ { host: 'drp-tst-dev008', id:'cam_0', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -P '+instr+' -C '+collect_host},
+ { host: 'drp-tst-dev009', id:'cam_1', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -P '+instr+' -C '+collect_host}
 ]
