--- a/psdaq/psdaq/cnf/one-node-cam.cnf
+++ b/psdaq/psdaq/cnf/one-node-cam.cnf
@@ -23,7 +23,6 @@ collect_host = 'localhost'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { id:'procstat',    flags:'p',    conda:conda_rel,                cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  { id:'modca',                     conda:conda_rel, env:epics_env, cmd:'modca DAQ:'+site+':XPM:3'},
  { id:'groupca',     flags:'s',    conda:conda_rel, env:epics_env, cmd:'groupca DAQ:'+site+' 3 '+platform},
  { id:'control',     flags:'spu',  conda:conda_rel, env:epics_env, cmd:'control -C BEAM -B DAQ:'+site+' -x 3 -P '+instr},
@@ -37,4 +36,7 @@ procmgr_config = [
 
  # Contributors
  { id:'drp_1',       flags:'sxpu', conda:conda_rel, cmd: 'drp -l 0x1 -D AreaDetector -d /dev/datadev_0 -o /drpffb/'+username+' -P '+instr+' -C '+collect_host },
+
+ # Start this guy last so that it finds the above processes
+ { id:'procstat',    flags:'p',    conda:conda_rel,                cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 ]
