move files to pycalgos/NDArray_ext.pyx and psalg/utils/ctest_utils.hh

--- a/psalg/psalg/utils/CMakeLists.txt
+++ b/psalg/psalg/utils/CMakeLists.txt
@@ -13,6 +13,7 @@ install(FILES
     Utils.hh
     MacTimeFix.hh
     DirFileIterator.hh
+    ctest_utils.hh
     DESTINATION include/psalg/utils
 )
 
