move json stuff to psdaq from xtcdata to make xtcdata dependency-free

--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(prometheus-cpp REQUIRED)
 find_package(ZeroMQ REQUIRED)
 find_package(epics REQUIRED)
 find_package(cpsw REQUIRED)
+find_package(RapidJSON REQUIRED)
 
 find_library(YAML_CPP_LIB yaml-cpp)
 
