--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -58,10 +58,14 @@ add_executable(configdb_obj_2xtc
 )
 
 target_include_directories(configdb_obj_2xtc PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
     ${PYTHON_INCLUDE_DIRS}
+    ${RAPIDJSON_INCLUDE_DIRS}
 )
 
 target_link_libraries(configdb_obj_2xtc
+    service
     xtcdata::xtc
     ${PYTHON_LIBRARIES}
 )
@@ -71,11 +75,11 @@ add_executable(test_teb_config
 )
 
 target_include_directories(test_teb_config PUBLIC
+    ${RAPIDJSON_INCLUDE_DIRS}
     ${PYTHON_INCLUDE_DIRS}
 )
 
 target_link_libraries(test_teb_config
-    xtcdata::xtc
     ${PYTHON_LIBRARIES}
 )
 
@@ -94,10 +98,13 @@ add_executable(pgpread_timetool
     pgpread_timetool.cc
 )
 target_include_directories(pgpread_timetool PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
     ../psdaq/pgp/aes-stream-drivers/include
     ${PYTHON_INCLUDE_DIRS}
 )
 target_link_libraries(pgpread_timetool
+    service
     xtcdata::xtc
     ${PYTHON_LIBRARIES}
 )
