SysLog C++ client moved to psalg/utils.

--- a/psalg/psalg/utils/CMakeLists.txt
+++ b/psalg/psalg/utils/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(utils SHARED
     src/Logger.cc
     src/DirFileIterator.cc
+    src/SysLog.cc
 )
 
 target_include_directories(utils PUBLIC
@@ -14,6 +15,7 @@ install(FILES
     MacTimeFix.hh
     DirFileIterator.hh
     ctest_utils.hh
+    SysLog.hh
     DESTINATION include/psalg/utils
 )
 
