--- a/psdaq/psdaq/monreq/CMakeLists.txt
+++ b/psdaq/psdaq/monreq/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(monReqServer
 
 target_link_libraries(monReqServer
     psalg::shmemsrv
+    psalg::utils
     eventBuilder
     collection
     exporter
