add random access example for hdf5 people and add offset/dgramsize for config transition in smdwriter

--- a/xtcdata/xtcdata/app/CMakeLists.txt
+++ b/xtcdata/xtcdata/app/CMakeLists.txt
@@ -5,6 +5,13 @@ target_link_libraries(xtcreader
     xtc
 )
 
+add_executable(randomaccess
+    randomaccess.cc
+)
+target_link_libraries(randomaccess
+    xtc
+)
+
 add_executable(jungfrau
     jungfrau.cc
 )
