--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   include:
   - if: branch = master
     os: osx
+    osx_image: xcode11.2
     python: 3.6
   - if: branch = master
     os: linux
