--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -45,6 +45,9 @@ procmgr_config = [
  { host: epics_host,  id:'pvcamcas', port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'campvs -P DAQ:LAB2:PVCAM'},
  { host: 'daq-tst-dev03',  id:'pvcam', port:'29466', flags:'s', conda:conda_rel, env:epics_env, cmd:'pvcam -p DAQ:LAB2:PVCAM'},
 
+## EPICS PV exporter
+ { host: epics_host,  id:'pvrtmon', port:'29467', flags:'s', conda:conda_rel, env:epics_env, cmd:'epics_exporter -P DAQ:LAB2:XPM:2 -N DeadFrac'},
+
 ## procstat
  {                    id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
   ]
