--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -35,9 +35,9 @@ procmgr_config = [
 #  6.4 GS/s digitizer (DEV06_3E)
  {                        id:'hsdpvs_3e_a', port:'29074', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+hsd_epics_dev06+'_3E:A'},
  {                        id:'hsdpvs_3e_b', port:'29075', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+hsd_epics_dev06+'_3E:B'},
- {                        id:'hsdpva_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:A'},
- {                        id:'hsdpvb_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:B'},
-# { host: 'daq-tst-dev06', id:'hsdioc_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+hsd_epics_dev06+'_3E -d /dev/pcie_adc_3e'},
+ {                        id:'hsdpva_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:A'},
+ {                        id:'hsdpvb_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:B'},
+ { host: 'daq-tst-dev06', id:'hsdioc_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+hsd_epics_dev06+'_3E -d /dev/pcie_adc_3e'},
  { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:A'},
  { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:B'},
 
@@ -59,14 +59,19 @@ procmgr_config = [
 # { host: 'daq-tst-dev06', id:'hsdioc_da', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd126PVs -P '+hsd_epics_dev06+'_DA -d /dev/pcie_adc_da'},
 # { host: 'drp-tst-dev020', id:'xpphsd_4', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_DA'},
 
+ # BLD
+ { host: 'drp-tst-dev018', id:'hpsex_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -b hpsex -D DAQ:LAB2:HPSEX -C '+collect_host },
+ { host: 'drp-tst-dev018', id:'ebeam_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 1 -P TMO -d /dev/datadev_0 -b ebeam -C '+collect_host },
+
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
- { host: 'drp-tst-dev016', id:'teb16'    , flags:'sxpu', conda:conda_rel, cmd:'teb -C '+collect_host},
+ { host: 'drp-tst-dev016', id:'teb16'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
+ { host: 'drp-tst-dev016', id:'meb13',       flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
 
  { host: 'drp-tst-dev001', id:'xppts_0' , flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
 # { host: 'drp-tst-dev011', id:'cam_11'  , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector'},
 
- { host: collect_host, id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
- {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host+' --logdir=/reg/neh/home/weaver/2019/08'},
+ { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
+ {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host+' --logdir=/reg/neh/home/weaver/2019/08'},
 ]
