--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -75,9 +75,9 @@ add_executable(tstEbLfLink      tstEbLfLink.cc)
 
 #add_executable(ibMon            ibMon.cc)
 
-add_executable(ctrb
-  ctrb.cc
-)
+#add_executable(ctrb
+#  ctrb.cc
+#)
 
 add_executable(teb
   teb.cc
@@ -151,13 +151,13 @@ target_link_libraries(tstEbLfLink
 #  rt
 #)
 #
-target_link_libraries(ctrb
-  contributor
-  collection
-  exporter
-  pthread
-  rt
-)
+#target_link_libraries(ctrb
+#  contributor
+#  collection
+#  exporter
+#  pthread
+#  rt
+#)
 
 target_link_libraries(teb
   eventBuilder
@@ -175,7 +175,7 @@ install(TARGETS
   utilities
   contributor
   eventBuilder
-  ctrb
+  #ctrb
   teb
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
