--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -13,8 +13,8 @@ ip_addr = '10.0.'+shelf
 collect_host = 'drp-tst-acc06'
 groups = '0'
 
-drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/weaver'
-#drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host
+#drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/weaver'
+drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -60,14 +60,14 @@ procmgr_config = [
 # { host: 'drp-tst-dev020', id:'xpphsd_4', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_DA'},
 
  # BLD
- { host: 'drp-tst-dev018', id:'hpsex_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -b hpsex -D DAQ:LAB2:HPSEX -C '+collect_host },
- { host: 'drp-tst-dev018', id:'ebeam_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 1 -P TMO -d /dev/datadev_0 -b ebeam -C '+collect_host },
+ { host: 'drp-tst-dev018', id:'bld_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -D hpsex+DAQ:LAB2:HPSEX,hpscp+DAQ:LAB2:HPSCP -C '+collect_host },
+# { host: 'drp-tst-dev018', id:'ebeam_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 1 -P TMO -d /dev/datadev_0 -b ebeam -C '+collect_host },
 
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
- { host: 'drp-tst-dev016', id:'teb16'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
- { host: 'drp-tst-dev016', id:'meb13',       flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
+ { host: 'drp-tst-dev019', id:'teb19'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
+ { host: 'drp-tst-dev016', id:'meb16',       flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
 
  { host: 'drp-tst-dev001', id:'xppts_0' , flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
 # { host: 'drp-tst-dev011', id:'cam_11'  , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector'},
