--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -38,9 +38,11 @@ procmgr_config = [
  { host: epics_host,  id:'pyxpm-3'  , port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'pyxpm --ip 10.0.1.103 -P DAQ:LAB2:XPM:1'},
 
 ## BLD service
- { host: epics_host,  id:'hpsdbuscas', port:'29463', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSEX'},
+ { host: epics_host,  id:'hpsdbuscas-hpsex', port:'29463', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSEX'},
+ { host: epics_host,  id:'hpsdbuscas-hpscp', port:'29468', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSCP'},
  { host: epics_host,  id:'bldcas'    , port:'29464', flags:'s', conda:conda_rel, env:epics_env, cmd:'bldcas -P DAQ:LAB2'},
  { host: 'drp-tst-dev021',  id:'hpsbldsvc' , port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -a 10.0.3.105 -i eno1 -n DAQ:LAB2:HPSEX -p 0x1e0'},
+ { host: 'drp-tst-dev021',  id:'hpsbldcpy' , port:'29451', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldCopy -i eno1 -I DAQ:LAB2:HPSEX -O DAQ:LAB2:HPSCP -o 1000'},
 ## EPICS camera
  { host: epics_host,  id:'pvcamcas', port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'campvs -P DAQ:LAB2:PVCAM'},
  { host: 'daq-tst-dev03',  id:'pvcam', port:'29466', flags:'s', conda:conda_rel, env:epics_env, cmd:'pvcam -p DAQ:LAB2:PVCAM'},
