--- a/psdaq/psdaq/cnf/lab3-system-test.cnf
+++ b/psdaq/psdaq/cnf/lab3-system-test.cnf
@@ -14,12 +14,16 @@ collect_host = 'drp-tst-acc06'
 groups = platform
 
 drp_cmd  = 'taskset 0xffbfeffbfe ' # Exclude cores 0, 10, 20, 30 (used by OS)
-drp_cmd += 'drp -P TMO -l 0x1 -d /dev/datadev_0 -C '+collect_host
+drp_cmd += 'drp -P TST -l 0x1 -d /dev/datadev_0 -C '+collect_host
 #drp_cmd += ' -o /ffb01/tstopr'
 
-drp_cmd  = 'taskset 0xffbfeffbfe ' # Exclude cores 0, 10, 20, 30 (used by OS)
-bld_cmd += 'drp_bld -P TMO -d /dev/datadev_0 -C '+collect_host
+bld_cmd  = 'taskset 0xffbfeffbfe ' # Exclude cores 0, 10, 20, 30 (used by OS)
+bld_cmd += 'drp_bld -P TST -d /dev/datadev_0 -C '+collect_host
 #bld_cmd += ' -o /ffb01/tstopr'
+
+pva_cmd  = 'taskset 0xffbfeffbfe ' # Exclude cores 0, 10, 20, 30 (used by OS)
+pva_cmd += 'drp_pva -P TST -d /dev/datadev_0 -C '+collect_host+' DAQ:LAB2:PVCAM'
+#pva_cmd += ' -o /ffb01/tstopr'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -76,6 +80,9 @@ procmgr_config = [
 
  # BLD
  { host: 'drp-tst-dev018', id:'bld_18', flags:'sxpu', conda:conda_rel, cmd: bld_cmd },
+
+ # PVA
+ { host: 'drp-tst-dev019', id:'pva_19', flags:'sxpu', conda:conda_rel, cmd: pva_cmd },
 
  # procstat
  {                         id:'procstat', flags:'p',  conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
