Remove BLD from base and hsd cnf.  Create new bld cnf for testing.

--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -16,6 +16,19 @@ groups = '0'
 #drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/weaver'
 drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host
 
+bld_set = ['hpsex+DAQ:LAB2:HPSEX,hpscp+DAQ:LAB2:HPSCP',
+#        'hpscpb+DAQ:LAB2:HPSCPB',
+#        'hpsex+DAQ:LAB2:HPSCPC',
+#        'hpsex+DAQ:LAB2:HPSCPD',
+#        'hpsex+DAQ:LAB2:HPSCPE',
+#        'hpsex+DAQ:LAB2:HPSCPF',
+#        'hpsex+DAQ:LAB2:HPSCPG',
+#        'hpsex+DAQ:LAB2:HPSCPH',
+        'hpsex+DAQ:LAB2:HPSCPI',]
+
+bld_str = ','.join(bld_set)
+
+
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
 #                "X" open xterm
@@ -35,8 +48,8 @@ procmgr_config = [
 #  6.4 GS/s digitizer (DEV06_3E)
  {                        id:'hsdpvs_3e_a', port:'29074', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+hsd_epics_dev06+'_3E:A'},
  {                        id:'hsdpvs_3e_b', port:'29075', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+hsd_epics_dev06+'_3E:B'},
- {                        id:'hsdpva_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:A'},
- {                        id:'hsdpvb_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:B'},
+# {                        id:'hsdpva_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:A'},
+# {                        id:'hsdpvb_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:B'},
  { host: 'daq-tst-dev06', id:'hsdioc_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+hsd_epics_dev06+'_3E -d /dev/pcie_adc_3e'},
  { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:A'},
  { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:B'},
@@ -60,17 +73,16 @@ procmgr_config = [
 # { host: 'drp-tst-dev020', id:'xpphsd_4', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_DA'},
 
  # BLD
- { host: 'drp-tst-dev018', id:'bld_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -D hpsex+DAQ:LAB2:HPSEX,hpscp+DAQ:LAB2:HPSCP -C '+collect_host },
-# { host: 'drp-tst-dev018', id:'ebeam_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 1 -P TMO -d /dev/datadev_0 -b ebeam -C '+collect_host },
+# { host: 'drp-tst-dev018', id:'bld_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -k interface=eno2 -D '+bld_str+' -C '+collect_host+' -v'},
 
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
  { host: 'drp-tst-dev019', id:'teb19'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
- { host: 'drp-tst-dev016', id:'meb16',       flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
+ { host: 'drp-tst-dev016', id:'meb16',       flags:'spu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
 
- { host: 'drp-tst-dev001', id:'xppts_0' , flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
-# { host: 'drp-tst-dev011', id:'cam_11'  , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector'},
+ { host: 'drp-tst-dev001', id:'xppts_0' , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
+ { host: 'drp-tst-dev011', id:'cam_11'  , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector -k sim_length=14'},
 
  { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
  {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host+' --logdir=/reg/neh/home/weaver/2019/08'},
