--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -12,22 +12,9 @@ shelf = '2'
 ip_addr = '10.0.'+shelf
 collect_host = 'drp-tst-acc06'
 groups = '0'
+hutch = 'TST'
 
-#drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/weaver'
-drp_cmd = 'drp -l 0x1 -d /dev/datadev_0 -C '+collect_host
-
-bld_set = ['hpsex+DAQ:LAB2:HPSEX,hpscp+DAQ:LAB2:HPSCP',
-#        'hpscpb+DAQ:LAB2:HPSCPB',
-#        'hpsex+DAQ:LAB2:HPSCPC',
-#        'hpsex+DAQ:LAB2:HPSCPD',
-#        'hpsex+DAQ:LAB2:HPSCPE',
-#        'hpsex+DAQ:LAB2:HPSCPF',
-#        'hpsex+DAQ:LAB2:HPSCPG',
-#        'hpsex+DAQ:LAB2:HPSCPH',
-        'hpsex+DAQ:LAB2:HPSCPI',]
-
-bld_str = ','.join(bld_set)
-
+drp_cmd = 'drp -P '+hutch+' -l 0x1 -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/weaver'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -72,18 +59,18 @@ procmgr_config = [
 # { host: 'daq-tst-dev06', id:'hsdioc_da', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd126PVs -P '+hsd_epics_dev06+'_DA -d /dev/pcie_adc_da'},
 # { host: 'drp-tst-dev020', id:'xpphsd_4', flags:'pu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_DA'},
 
- # BLD
-# { host: 'drp-tst-dev018', id:'bld_0', flags:'sxpu', conda:conda_rel, cmd: 'drp_bld -l 2 -P TMO -d /dev/datadev_0 -k interface=eno2 -D '+bld_str+' -C '+collect_host+' -v'},
+#  TTL trigger (signal) on input channels
+ { host: 'daq-tst-dev03', id:'ttl'     , flags:'s', conda:conda_rel, cmd:'tprtrig -r 1'},
 
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
  { host: 'drp-tst-dev019', id:'teb19'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
- { host: 'drp-tst-dev016', id:'meb16',       flags:'spu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host},
+ { host: 'drp-tst-dev016', id:'meb16',       flags:'spu', conda:conda_rel, cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
 
  { host: 'drp-tst-dev001', id:'xppts_0' , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
  { host: 'drp-tst-dev011', id:'cam_11'  , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D AreaDetector -k sim_length=14'},
 
- { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
- {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host+' --logdir=/reg/neh/home/weaver/2019/08'},
+ { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P '+hutch},
+ {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
