--- a/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
+++ b/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
@@ -42,6 +42,12 @@ target_include_directories(kcuSim PUBLIC
     ../../aes-stream-drivers/include
 )
 
+add_executable(kcuSimProxy xSimProxy.cpp)
+
+target_include_directories(kcuSimProxy PUBLIC
+    ../../aes-stream-drivers/include
+)
+
 add_executable(kcuSimValid xSimValid.cpp)
 
 target_include_directories(kcuSimValid PUBLIC
