--- a/psdaq/psdaq/cnf/one-node-cam.cnf
+++ b/psdaq/psdaq/cnf/one-node-cam.cnf
@@ -6,9 +6,11 @@ expnum   = 'expnum'
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
 conda_rel = 'ps-2.0.5'
 
-instr        = 'TMO'
+instr        = 'TST'
 site         = 'LAB2'
 collect_host = 'localhost'
+xpm          = '3'
+prom_cfg_dir = '/reg/g/psdm/psdatmgr/etc/config/prom'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -23,19 +25,19 @@ collect_host = 'localhost'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { id:'modca',                     conda:conda_rel, env:epics_env, cmd:'modca DAQ:'+site+':XPM:3'},
+ { id:'modca',                     conda:conda_rel, env:epics_env, cmd:'modca DAQ:'+site+':XPM:'+xpm},
  { id:'groupca',     flags:'s',    conda:conda_rel, env:epics_env, cmd:'groupca DAQ:'+site+' 3 '+platform},
- { id:'control',     flags:'spu',  conda:conda_rel, env:epics_env, cmd:'control -C BEAM -B DAQ:'+site+' -x 3 -P '+instr},
+ { id:'control',     flags:'spu',  conda:conda_rel, env:epics_env, cmd:'control -C BEAM -B DAQ:'+site+' -x '+xpm+' -P '+instr},
  { id:'control_gui', flags:'p',    conda:conda_rel,                cmd:'control_gui -H '+collect_host},
 
  # Trigger event builder
- { id:'teb',         flags:'sxpu', conda:conda_rel, cmd:'teb -P '+instr+' -C '+collect_host},
+ { id:'teb',         flags:'sxpu', conda:conda_rel, cmd:'teb -P '+instr+' -C '+collect_host+' -M '+prom_cfg_dir},
 
  # Monitor event builder
- { id:'meb',         flags:'sxpu', conda:conda_rel, cmd:'monReqServer -d -q 4 -P '+instr+' -C '+collect_host},
+ { id:'meb',         flags:'sxpu', conda:conda_rel, cmd:'monReqServer -d -q 4 -P '+instr+' -C '+collect_host+' -M '+prom_cfg_dir},
 
  # Contributors
- { id:'drp_1',       flags:'sxpu', conda:conda_rel, cmd: 'drp -l 0x1 -D AreaDetector -d /dev/datadev_0 -o /drpffb/'+username+' -P '+instr+' -C '+collect_host },
+ { id:'drp_1',       flags:'sxpu', conda:conda_rel, cmd: 'drp -l 0x1 -D AreaDetector -d /dev/datadev_0 -o /drpffb/'+username+' -P '+instr+' -C '+collect_host+' -M '+prom_cfg_dir},
 
  # Start this guy last so that it finds the above processes
  { id:'procstat',    flags:'p',    conda:conda_rel,                cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
