Use instrument name "tst" for test stand.

--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -1,6 +1,6 @@
 if not platform: platform = '1'
 username = 'lcls2'
-instr    = 'TST'
+instr    = 'tst'
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
 conda_rel = 'ps-2.0.5'
