--- a/psdaq/psdaq/cnf/one-node-cam.cnf
+++ b/psdaq/psdaq/cnf/one-node-cam.cnf
@@ -4,7 +4,7 @@ username = 'lcls2'
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
 conda_rel = 'ps-2.0.5'
 
-instr        = 'TST'
+instr        = 'tst'
 site         = 'LAB2'
 collect_host = 'localhost'
 xpm          = '3'
